--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "autoprefixer": "^10.2.3",
+    "browser-sync": "^2.26.14",
+    "concurrently": "^5.3.0",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
     "tailwindcss": "^2.0.2"
@@ -10,7 +12,9 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "python3 manage.py runserver",
+    "dev": "NODE_ENV=development concurrently 'npm run start' 'postcss tailwind.css -o assets/css/style.css --watch' 'browser-sync start --proxy \"localhost:8000\" --files \"**/*.*, !node_modules/**, !venv/**\"'",
+    "build": "NODE_ENV=production postcss tailwind.css -o assets/css/style.css"
   },
   "keywords": [],
   "author": "",
