--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "autoprefixer": "^10.2.3",
     "browser-sync": "^2.26.14",
     "concurrently": "^5.3.0",
-    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
     "postcss-import": "^14.0.0",
     "tailwindcss": "^2.0.2"
   },
