--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "dependencies": {
-    "autoprefixer": "^10.2.3",
-    "browser-sync": "^2.26.14",
-    "concurrently": "^5.3.0",
-    "postcss-cli": "^8.3.1",
-    "postcss-import": "^14.0.0",
-    "tailwindcss": "^2.0.2"
-  },
+  "dependencies": {},
   "name": "djcommerce",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.26.14",
+    "concurrently": "^6.0.2",
+    "autoprefixer": "^10.2.5",
+    "postcss-cli": "^8.3.1",
+    "postcss-import": "^14.0.0",
+    "tailwindcss": "^2.1.2"
+  },
   "scripts": {
     "start": "python3 manage.py runserver",
     "dev": "NODE_ENV=development concurrently 'npm run start' 'postcss tailwind.css -o assets/css/style.css --watch' 'browser-sync start --proxy \"localhost:8000\" --files \"**/*.*, !node_modules/**, !venv/**\"'",
